--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~50.0.4",
+    "expo-localization": "^14.8.3",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "^0.24.9",
     "react": "18.2.0",
     "react-native": "0.73.2"
   },
